--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -3,6 +3,7 @@
    ========================================================================== */
 
 #main {
+   font-size: 0.8em;
   @include container;
   @include clearfix;
   margin-top: 2em;
