--- a/_sass/theme/_default.scss
+++ b/_sass/theme/_default.scss
@@ -28,7 +28,7 @@ $sidebar-screen-min-width   : 1024px;
 
 /* Default light theme for the site */
 :root {
-    --global-base-color                 : #{$gray};
+    --global-base-color                 : #fff; /* default: #{$gray}; */
     --global-bg-color                   : #fff;
     --global-border-color               : #{$lighter-gray};
     --global-code-background-color      : #fafafa;
